[package]
name = "string_template_example"
version = "0.2.1"
authors = ["Michael Ravits <michael@xlucidity.com>"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/michaelr524/string_template"
homepage = "https://github.com/michaelr524/string_template"
description = """
Very simple string template for Rust.
"""
categories = ["template-engine", "text-processing"]
keywords = ["template"]

[dependencies]
string_template = { path = "../" }